--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_toy_project?useSSL=fals
 spring.datasource.username=root
 
 # db response password
-spring.datasource.password=rladudfo1
+spring.datasource.password=XXXXXXX
 
 spring.jpa.show-sql=true
 
