--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  profiles:
+    active: local
+  messages:
+    basename: i18n/exception
+    encoding: UTF-8
   social:
     kakao:
       client_id: 14c51eebda1ddbfccaac3c40dd5f07bf # 앱생성시 받은 REST API 키
@@ -7,8 +12,3 @@ spring:
         login: https://kauth.kakao.com/oauth/authorize
         token: https://kauth.kakao.com/oauth/token
         profile: https://kapi.kakao.com/v2/user/me
-  url:
-    base: http://localhost:8080
-  freemarker:
-    template-loader-path: classpath:/templates
-    suffix: .ftl
