--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,7 +6,7 @@ logging:
 spring:
   profiles: local
   datasource:
-    password: rladudfo1
+    password: XXXXX
     url: jdbc:mysql://localhost:3306/spring_toy_project?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
   social:
