--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,21 +4,19 @@ logging:
     com.example.springtoy.api: debug
 
 spring:
-  profiles: local
+  profiles:
+    active:
+      on-profile: local
   datasource:
     password: rladudfo1
     url: jdbc:mysql://localhost:3306/spring_toy_project?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
-  social:
-    kakao:
-      client_id: 14c51eebda1ddbfccaac3c40dd5f07bf # 앱생성시 받은 REST API 키
-      redirect: /social/login/kakao
-      jpa:
-        hibernate:
-          ddl-auto: create
-        show-sql: true
-      url:
-        base: http://localhost:8080
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: create
+    show-sql: true
   url:
     base: http://localhost:8080
+
 
