--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   profiles:
-    active: local
+    active:
+      on-profile: local
   messages:
     basename: i18n/exception
     encoding: UTF-8
